sort the buckets to be greedier and can terminate sooner

--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -369,7 +369,7 @@ function calculate(tabs) {
         }
         else{
             HugeSet = trios
-            HugeSet.sort(comparefn)
+            // HugeSet.sort(comparefn)
             totalNodes = HugeSet.length
             TotalTag.innerHTML = "Total sets: "+ (indexOfSet+1)+"/"+totalNodes
             display()
