--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </div>
 <h1>About Me</h1>
 <p>
-    My name is Justin and I love games and I love programming. My favorite game of all time is Maplestory and it is why I created half of the
+    My name is Justin and I love games and I love programming. My favorite game of all time is Maplestory and it is why I created the
     projects on this website in the first place. If you didn't know, Maplestory is a 2D mmo rpg released in the mid 2000s. 
 </p>
 
