added maple scouter helper tool

--- a/NodeSolver/NodeSolver.html
+++ b/NodeSolver/NodeSolver.html
@@ -13,6 +13,7 @@
     <a href="../reference/NodeGuide.html">Node Guide</a>
     <a class="active" href="./NodeSolver.html">Text Node Solver(Old)</a>
     <a href="../imageSolver/imageSolver.html">Image Node Solver(New)</a>
+    <a href="../mapleScouterHelper/helper.html">Maplescouter Helper</a>
 </div>
 
 
