--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -12,6 +12,7 @@
         <a href="../reference/NodeGuide.html">Node Guide</a>
         <a href="../NodeSolver/NodeSolver.html">Text Node Solver(Old)</a>
         <a class="active" href="./imageSolver.html">Image Node Solver(New)</a>
+        <a href="../mapleScouterHelper/helper.html">Maplescouter Helper</a>
     </div>
     <h1>Maplestory Node Solver</h1>
     <p class="title">Made by: mastermysty</p>
