--- a/mapleScouterHelper/helper.html
+++ b/mapleScouterHelper/helper.html
@@ -13,7 +13,7 @@
     <a href="../reference/NodeGuide.html">Node Guide</a>
     <a href="../NodeSolver/NodeSolver.html">Text Node Solver(Old)</a>
     <a href="../imageSolver/imageSolver.html">Image Node Solver(New)</a>
-    <a href="../mapleScouterHelper/helper.html">Maplescouter Helper</a>
+    <a class="active" href="../mapleScouterHelper/helper.html">Maplescouter Helper</a>
 </div>
 
 
