add embeds for all pages

--- a/mapleScouterHelper/helper.html
+++ b/mapleScouterHelper/helper.html
@@ -7,6 +7,8 @@
     <title>Node Solver</title>
     <script src="./helper.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="./helper.css">
+    <meta property="og:title" content="Scouter Helper">
+    <meta property="og:description" content="Tool to help with a common inaccuracy when using maple scouter.">
 </head>
 <div id="navBar">
     <a href="../index.html">Home</a>
