--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./imageSolver.css">
-<title>Mysty's Image Solver</title>
+<title>Image Node Solver</title>
+<meta property="og:title" content="ScreenShot Node Solver">
+<meta property="og:description" content="Tool for finding mix and match trios in maplestory. Just take a screen shot and calculate.">
+
+
 </head>
 
 <body>
