add embeds for all pages

--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./imageSolver.css">
 <title>Image Node Solver</title>
-<meta property="og:title" content="ScreenShot Node Solver">
-<meta property="og:description" content="Tool for finding mix and match trios in maplestory. Just take a screen shot and calculate.">
+<meta property="og:title" content="ScreenShot Node Solver"/>
+<meta property="og:description" content="Tool for finding mix and match trios in maplestory. Just take a screen shot and calculate."/>
 
 
 </head>
