--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -7,8 +7,13 @@
 
 <meta property="og:title" content="ScreenShot Node Solver"/>
 <meta property="og:description" content="Tool for finding mix and match trios in maplestory. Just take a screen shot and calculate."/>
+<meta name="description" content="Tool for finding mix and match trios in maplestory. Just take a screen shot and calculate.">
+<meta property="og:url" content="https://mystyjl.github.io/imageSolver/imageSolver.html" />
+<link rel="canonical" href="https://mystyjl.github.io/imageSolver/imageSolver.html">
 
-
+<meta property="og:site_name" content="Image Node Solver">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="en_US">
 </head>
 
 <body>
