add embeds for all pages

--- a/NodeSolver/NodeSolver.html
+++ b/NodeSolver/NodeSolver.html
@@ -7,6 +7,16 @@
     <title>Node Solver</title>
     <script src="./nodeCalculator.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="./NodeSolver.css">
+
+    <meta property="og:title" content="Node Solver">
+    <meta property="og:site_name" content="Node Solver">
+    <meta property="og:description" content="Tool to manually solve node trios in Maplestory.">
+    <meta name="description" content="Tool to manually solve node trios in Maplestory.">
+    <meta property="og:url" content="https://mystyjl.github.io/NodeSolver/NodeSolver.html" />
+    <link rel="canonical" href="https://mystyjl.github.io/NodeSolver/NodeSolver.html">
+
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
 </head>
 <div id="navBar">
     <a href="../index.html">Home</a>
