--- a/mapleScouterHelper/helper.html
+++ b/mapleScouterHelper/helper.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widli=device-widli, initial-scale=1.0">
-    <title>Node Solver</title>
+    <title>Scouter Helper</title>
     <script src="./helper.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="./helper.css">
     <meta property="og:title" content="Scouter Helper">
     <meta property="og:description" content="Tool to help with a common inaccuracy when using maple scouter.">
+    <meta name="description" content="Tool to help with a common inaccuracy when using maple scouter.">
+    <meta property="og:url" content="https://mystyjl.github.io/mapleScouterHelper/helper.html" />
+    <link rel="canonical" href="https://mystyjl.github.io/mapleScouterHelper/helper.html">
+    <meta property="og:site_name" content="Scouter Helper">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
 </head>
 <div id="navBar">
     <a href="../index.html">Home</a>
