rewrite node solver as a class

--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -69,10 +69,11 @@
     <p>Experimentally accepts locked nodes<br>Click images to remove</p>
     
     <div id="lastCheck"></div>
-
+<script type="text/javascript" src="advancedInput.js"></script>
 <script type="text/javascript" src="classImages.js"></script>
 <script async src="opencv.js" type="text/javascript"></script>
-<script async src="processImage.js" type="text/javascript"></script>
 <script src="imageSolver.js" type="text/javascript"></script>
+<script async src="processImage.js" type="text/javascript"></script>
+
 </body>
 </html>
