--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -27,6 +27,7 @@
     <h1>Maplestory Node Solver</h1>
     <p class="title">Made by: mastermysty</p>
     <div class="title">
+        <p >Note: at resolutions above 1920x1080 maplestory tends to stretch images so for best results set the resolution of your game to 1920x1080 (windowed) </p>
         <p >Demo video:</p>
         <button onclick="hideVid()">hide</button>
         <div id="video">
