--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -27,7 +27,7 @@
     <h1>Maplestory Node Solver</h1>
     <p class="title">Made by: mastermysty</p>
     <div class="title">
-        <p >Note: at resolutions above 1920x1080 maplestory tends to stretch images so for best results set the resolution of your game to 1920x1080 (windowed) </p>
+        <h4 class="important">Note: at resolutions above 1920x1080 maplestory tends to stretch images so for best results set the resolution of your game to 1920x1080 (windowed) </h4>
         <p> Also turn off any image filters you may have for the game</p>
         <p >Demo video:</p>
         <button onclick="hideVid()">hide</button>
