--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 <div id="navBar">
     <a class="active" href="../index.html">Home</a>
-    <a href="../reference/NodeGuide.html">Node Guide</a>
-    <a href="../NodeSolver/NodeSolver.html">Text Node Solver(Old)</a>
-    <a href="../imageSolver/imageSolver.html">Image Node Solver(New)</a>
+    <a href="./reference/NodeGuide.html">Node Guide</a>
+    <a href="./NodeSolver/NodeSolver.html">Text Node Solver(Old)</a>
+    <a href="./imageSolver/imageSolver.html">Image Node Solver(New)</a>
+    <a href="./mapleScouterHelper/helper.html">Maplescouter Helper</a>
 </div>
 <h1>Main Project Directory</h1>
 <div class="module">
