--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -26,9 +26,14 @@
     </div>
     <h1>Maplestory Node Solver</h1>
     <p class="title">Made by: mastermysty</p>
+
     <div class="title">
-        <h4 class="important">Note: at resolutions above 1920x1080 maplestory tends to stretch images so for best results set the resolution of your game to 1920x1080 (windowed) </h4>
-        <p> Also turn off any image filters you may have for the game</p>
+        <button class="cssbuttons-io" onclick="hideInstructions()" ><span id="hideInstruct">hide</span></button>
+        <div id="instructions">
+            <h4 class="important">Note: at resolutions above 1920x1080 maplestory tends to stretch images so for best results set the resolution of your game to 1920x1080 (windowed). Then go to UI->UI size-> and change the setting to ideal ratio like the image below: </h4>
+            <img src="ui_settings.png">
+            <p> Also turn off any image filters you may have for the game</p>
+        </div>       
         <p >Demo video:</p>
         <button class="cssbuttons-io" onclick="hideVid()"><span id="vidHide">hide</span></button>
         <div id="video">
